<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp"
    tools:context=".events.creation.CEventDetailFragment">

    <Button
        android:id="@+id/QRCheckInBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cEventDetailMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:text="@string/event_details"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cEventDetailMainText"
        app:layout_constraintBottom_toTopOf="@+id/cEventDetailNextButton">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eventNameInput"
                android:layout_width="340dp"
                android:layout_height="60dp"
                android:layout_margin="15dp"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:hint="@string/enter_the_name_of_the_event"
                android:inputType="text"
                android:textColorHint="@color/text_tint"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/eventDateInput"
                android:layout_width="340dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:gravity="center_vertical"
                android:hint="@string/enter_the_date"
                android:textColorHint="@color/text_tint"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventNameInput"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/eventTimeInput"
                android:layout_width="340dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:gravity="center_vertical"
                android:hint="@string/enter_the_time"
                android:textColorHint="@color/text_tint"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDateInput"
                android:importantForAutofill="no" />


            <EditText
                android:id="@+id/eventLocationInput"
                android:layout_width="340dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:hint="@string/enter_the_location"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/text_tint"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventTimeInput" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="340dp"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventLocationInput">

                <CheckBox
                    android:id="@+id/hasCapacity"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleX="1.3"
                    android:scaleY="1.3" />

                <EditText
                    android:id="@+id/eventCapacityInput"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:hint="@string/enter_the_capacity"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="@color/text_tint"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/eventDescriptionInput"
                android:layout_width="340dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:gravity="start"
                android:hint="@string/enter_the_description"
                android:importantForAutofill="no"
                android:inputType="text|textLongMessage|textMultiLine"
                android:lines="7"
                android:maxHeight="300sp"
                android:maxLines="10"
                android:minLines="4"
                android:singleLine="false"
                android:textAlignment="gravity"
                android:textColorHint="@color/text_tint"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/cEventDetailNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/next"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/QRCheckInBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>